--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -3,6 +3,7 @@
     {{#each herbalTeas}}
     <div class="col-sm-6 col-lg-4">
       <div class="card card-herbalTeas">
+        <a href="/he"></a>
         <img src="{{this.image}}" class="card-img-top" alt="..." />
         <div class="card-body">
           <h5 class="card-title">{{this.name}}</h5>
