--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -35,13 +35,14 @@
             data-bs-toggle="dropdown"
             aria-expanded="false"
           >
-            Dropdown
+            Nghĩa Lê
           </a>
-          <ul class="dropdown-menu dropdown-menu-dark">
+          <ul class="dropdown-menu dropdown-menu-light">
             <li><a class="dropdown-item" href="/herbal-tea/create">Thêm sản phẩm</a></li>
-            <li><a class="dropdown-item" href="/herbal-tea/edit">Sửa sản phẩm</a></li>
+            <li><a class="dropdown-item" href="/me/stored/products">Sửa sản phẩm</a></li>
             <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <div class="dropdown-divider"></div>
+            <li><a class="dropdown-item" href="#">Đăng xuất</a></li>
           </ul>
         </li>
       </ul>
