--- a/src/resources/views/me/stored-products.hbs
+++ b/src/resources/views/me/stored-products.hbs
@@ -10,18 +10,78 @@
       </tr>
     </thead>
     <tbody>
-        {{#each herbalTeas}}
-      <tr>
-        <th scope="row">{{sum @index 1}}</th>
-        <td>{{this.name}}</td>
-        <td>{{this.price}}</td>
-        <td>{{this.slug}}</td>
-        <td>
+      {{#each herbalTeas}}
+        <tr>
+          <th scope="row">{{sum @index 1}}</th>
+          <td>{{this.name}}</td>
+          <td>{{this.price}}</td>
+          <td>{{this.slug}}</td>
+          <td>
             <a href="/herbal-tea/{{this._id}}/edit" class="btn btn-link">Sửa</a>
-            <a href="" class="btn btn-link">Xóa</a>
-        </td>
-      </tr>
-        {{/each}}
+            <a
+              href=""
+              class="btn btn-link"
+              data-bs-toggle="modal"
+              data-bs-id="{{this._id}}"
+              data-bs-target="#delete-products-modal"
+            >Xóa</a>
+          </td>
+        </tr>
+      {{/each}}
     </tbody>
   </table>
 </div>
+
+{{! <---Comfimr delete---> }}
+<div id="delete-products-modal" class="modal" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Xóa sản phẩm ?</h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body">
+        <p>Bạn có chắc chắn xóa sản phẩm này không?</p>
+      </div>
+      <div class="modal-footer">
+        <button
+          type="button"
+          class="btn btn-secondary"
+          data-bs-dismiss="modal"
+        >Hủy</button>
+        <button id="btn-delete-product" type="button" class="btn btn-danger">Xóa bỏ</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+{{!-- delete-hidden-form --}}
+<form name="delete-product-form" method="POST"  >
+
+</form>
+
+{{!-- get id herbal-tea product --}}
+<script>
+  var productId;
+  var deleteForm = document.forms['delete-product-form'];
+
+  const deleteProductsModal = document.getElementById('delete-products-modal');
+  deleteProductsModal.addEventListener('show.bs.modal', event => { 
+  
+  const button = event.relatedTarget;
+  productId = button.getAttribute('data-bs-id');
+  
+  })
+
+  const  deleteProductsBtn = document.getElementById('btn-delete-product');
+  deleteProductsBtn.onclick = function() {
+  
+    deleteForm.action='/herbal-tea/'+productId+ '?_method=DELETE';
+    deleteForm.submit()
+  }
+</script>
