--- a/src/resources/views/me/stored-products.hbs
+++ b/src/resources/views/me/stored-products.hbs
@@ -1,15 +1,42 @@
-<div class="mt-4">
+<form class="mt-4" name="container-form" method="POST" action="/herbal-tea/handle-form-actions" >
 
   <div>
     <h3>Sản phẩm của tôi</h3>
     {{#if deletedCount}}
-    <a href="/me/trash/products">Thùng rác ({{deletedCount}})</a>
-    {{/if }}
+      <a href="/me/trash/products">Thùng rác ({{deletedCount}})</a>
+    {{/if}}
+
+    <div class="mt-4 d-flex align-item-center">
+      <div class="form-check">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          value=""
+          id="checkbox-all"
+        />
+        <label class="form-check-label" for="checkbox-all">
+          Chọn tất cả
+        </label>
+      </div>
+
+      <select
+        class=" form-control-sm select-all-option "
+        name="action"
+        required
+      >
+        <option value="">-- Chọn hành động --</option>
+        <option value="delete">Xóa</option>
+
+      </select>
+      <button class="btn btn-primary btn-sm btn-all-submit-all disabled">
+        Thực hiện
+      </button>
+    </div>
   </div>
   <table class="table mt-4">
     <thead>
       <tr>
-        <th scope="col">#</th>
+        <th scope="col" colspan="2">#</th>
         <th scope="col">Tên sản phẩm</th>
         <th scope="col">Giá</th>
         <th scope="col">Hình ảnh sản phẩm</th>
@@ -19,6 +46,17 @@
     <tbody>
       {{#each herbalTeas}}
         <tr>
+          <td>
+            <div class="form-check">
+              <input
+                class="form-check-input"
+                type="checkbox"
+                name="productIds[]"
+                value="{{this._id}}"
+                
+              />
+            </div>
+          </td>
           <th scope="row">{{sum @index 1}}</th>
           <td>{{this.name}}</td>
           <td>{{this.price}}</td>
@@ -34,17 +72,19 @@
             >Xóa</a>
           </td>
         </tr>
-        {{else}}
-         <tr>
+      {{else}}
+        <tr>
           <td colspan="5" class="text-center">
             Bạn chưa có sản phẩm nào.
-            <a href="http://localhost:3000/herbal-tea/create"> Đăng sản phẩm </a>
+            <a href="http://localhost:3000/herbal-tea/create">
+              Đăng sản phẩm
+            </a>
           </td>
-         </tr>
+        </tr>
       {{/each}}
     </tbody>
   </table>
-</div>
+</form>
 
 {{! <---Comfimr delete---> }}
 <div id="delete-products-modal" class="modal" tabindex="-1">
@@ -68,34 +108,80 @@
           class="btn btn-secondary"
           data-bs-dismiss="modal"
         >Hủy</button>
-        <button id="btn-delete-product" type="button" class="btn btn-danger">Xóa bỏ</button>
+        <button id="btn-delete-product" type="button" class="btn btn-danger">Xóa
+          bỏ</button>
       </div>
     </div>
   </div>
 </div>
 
-{{!-- delete-hidden-form --}}
-<form name="delete-product-form" method="POST"  >
+{{! delete-hidden-form }}
+<form name="delete-product-form" method="POST">
 
 </form>
 
-{{!-- get id herbal-tea product --}}
+{{! get id herbal-tea product }}
 <script>
-  var productId;
-  var deleteForm = document.forms['delete-product-form'];
+  document.addEventListener('DOMContentLoaded',function()
+  {
 
-  const deleteProductsModal = document.getElementById('delete-products-modal');
-  deleteProductsModal.addEventListener('show.bs.modal', event => { 
-  
-  const button = event.relatedTarget;
-  productId = button.getAttribute('data-bs-id');
-  
-  })
+ 
+      var productId;
+      var deleteForm = document.forms['delete-product-form']; 
+      var containerForm = document.forms['container-form']; 
+      const deleteProductsModal = document.getElementById('delete-products-modal');
+      var checkboxAll = $('#checkbox-all');
+      var productItemCheckboxs= $('input[name="productIds[]"]');
+      var checkAllSubmitBtn = $('.btn-all-submit-all')
 
-  const  deleteProductsBtn = document.getElementById('btn-delete-product');
-  deleteProductsBtn.onclick = function() {
-  
-    deleteForm.action='/herbal-tea/'+productId+ '?_method=DELETE';
-    deleteForm.submit()
-  }
+      deleteProductsModal.addEventListener('show.bs.modal', event => {
+        const button = event.relatedTarget; 
+        productId = button.getAttribute('data-bs-id'); }) 
+      const deleteProductsBtn = document.getElementById('btn-delete-product');
+      deleteProductsBtn.onclick = function() {
+        deleteForm.action='/herbal-tea/'+productId+ '?_method=DELETE';
+        deleteForm.submit() };
+
+      //checkboxAll all changed
+      checkboxAll.change(function()
+      {
+        var isCheckedAll = $(this).prop('checked')
+        productItemCheckboxs.prop('checked', isCheckedAll) 
+        renderCheckAllBtn()
+        
+      })
+    //productItemCheckboxs  changed
+      productItemCheckboxs.change(function()
+      { 
+        var isCheckedAll = productItemCheckboxs.length===$('input[name="productIds[]"]:checked').length;
+        checkboxAll.prop('checked', isCheckedAll);
+        renderCheckAllBtn()
+      })
+      //check all submit button clicked
+     
+      checkAllSubmitBtn.on('submit',function (e)
+      {
+        var isSubmitable = !$(this).hasClass('disabled')
+        if(!isSubmitable){
+          e.preventDefault();
+        }
+      })
+
+      //Re-renderCheckAllSubmitBtn
+      
+      function renderCheckAllBtn()
+      {
+        var checkedCount = $('input[name="productIds[]"]:checked').length
+        if(checkedCount>0) 
+          {
+            checkAllSubmitBtn.removeClass('disabled');
+          }
+        else{
+          checkAllSubmitBtn.addClass('disabled');
+        }
+        
+      }
+     
+      
+  });
 </script>
