--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,32 +1,22 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarNavDarkDropdown"
-      aria-controls="navbarNavDarkDropdown"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    
+  <div class="container d-flex align-items-center">
+    <div class="col-5 col-sm-5">
+      <i class="fa-brands fa-facebook icon-header"></i>
+      <i class="fa-brands fa-instagram icon-header"></i>
+      <i class="fa-brands fa-youtube icon-header"></i>
+    </div>
+    <a class="navbar-brand" href="#"><img
+        src="https://toiyeutra.vn/upload/img/tra_thao_moc1.png"
+        class="col-6 col-sm-6"
+        alt=""
+      />
+    </a>
     <div
-      class="collapse navbar-collapse justify-content-end"
+      class="collapse navbar-collapse justify-content-end col-2 col-sm-2"
       id="navbarNavDarkDropdown"
     >
+    
       <ul class="navbar-nav">
-        <form class="d-flex" role="search">
-          <input
-            class="form-control me-2"
-            type="search"
-            placeholder="Search"
-            aria-label="Search"
-          />
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
@@ -41,11 +31,28 @@
             <li><a class="dropdown-item" href="/herbal-tea/create">Thêm sản phẩm</a></li>
             <li><a class="dropdown-item" href="/me/stored/products">Sửa sản phẩm</a></li>
             <li><a class="dropdown-item" href="#">Another action</a></li>
-            <div class="dropdown-divider"></div>
+          
             <li><a class="dropdown-item" href="#">Đăng xuất</a></li>
           </ul>
         </li>
       </ul>
+    </div>
+  </div>
+</nav>
+
+<nav class="navbar navbar-expand-lg bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link active" aria-current="page" href="#">Home</a>
+        <a class="nav-link" href="#">Features</a>
+        <a class="nav-link" href="#">Pricing</a>
+        <a class="nav-link disabled">Disabled</a>
+      </div>
     </div>
   </div>
 </nav>
