--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -29,6 +29,37 @@
   </button>
 </div>
 </div>
+
+{{!-- NEWs --}}
+<br>
+<p class="fw-semibold fs-5">THÁNG NÀY UỐNG TRÀ GÌ?</p>
+<br>
+<div class="card mb-3 px-4 py-4" >
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="https://toiyeutra.vn/upload/img/pages/thang-nay-uong-tra-gi1.jpg" class="img-fluid rounded-start" alt="...">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <p class="card-text">Trà hoa hồng từ lâu đã được ưa chuộng bởi hương thơm nhẹ nhàng, ngọt ngào đặc trưng của nó. Do có hàm lượng vitamin C cao nên hoa hồng rất có ích trong việc làm đẹp, giúp cơ thể khỏe mạnh, thải độc, mát gan. Là loài hoa tượng trưng cho tình yêu nên mỗi khi thưởng thức trà hoa hồng Đà Lạt, ta đều cảm nhận được một điều gì đó rất sâu sắc, lưu luyến, không muốn xa rời. </p>
+        <button type="button" class="btn btn-outline-dark">8 CÔNG DỤNG TUYỆT VỜI CỦA TRÀ HOA HỒNG</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+{{!-- trend --}}
+<br>
+<hr>
+<br>
+<div class="d-flex justify-content-between">
+  <p class="fw-semibold fs-5">XU HƯỚNG TUẦN NÀY</p>
+  <button type="button" class="btn btn-outline-dark">XEM TẤT CẢ SẢN PHẨM</button>
+</div>
+<br>
+<hr>
+
+
 {{!-- Content --}}
 <div class="mt-4">
   <div class="row">
@@ -52,3 +83,5 @@
 
   </div>
 </div>
+
+
