--- a/src/resources/views/partials/footer.hbs
+++ b/src/resources/views/partials/footer.hbs
@@ -1,1 +1,49 @@
-<h1>FOOTER</h1>
+<div class="mt-4 d-flex " style="background-color: #F4F4F2;">
+  <div class="card mb-3 col-6 px-5" style="max-width: 540px; border:none; background-color:transparent">
+    <div class="row g-0">
+      <div class="col-md-4" style="padding:20px">
+        <img
+          src="https://toiyeutra.vn/upload/img/tra_thao_moc1.png"
+          class="img-fluid rounded-start"
+          alt="..."
+        />
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <p class="card-text" style="font-size:0.9rem ;">Tôi Yêu Trà cung cấp những sản phẩm trà thảo mộc
+            và dược liệu truyền thống được khai thác bền vững, giữ trọn độ tinh
+            khiết tự nhiên, thân thiện với môi trường. Chúng tôi hướng tới việc
+            cung cấp các sản phẩm trà thảo mộc tốt cho sức khỏe, và là nhà tiên
+            phong về các loại trà dược liệu tại Việt Nam.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-6 d-flex justify-content-evenly py-3" >
+    <div class="footer-info d-flex justify-content-start align-items-start flex-column px-4" >
+      <p class="fw-semibold fs-5 ">TIN TỨC</p>
+      <br />
+     <div>
+        <button style="border:none; border-radius:unset; background-color:#EEEEEE" type="button" class="btn btn-outline-primary"> <i class="fa-brands fa-facebook " style="color:black"></i></button>
+        <button style="border:none; border-radius:unset; background-color:#EEEEEE" type="button" class="btn btn-outline-primary"><i class="fa-brands fa-instagram " style="color:black"></i></button>
+        <button style="border:none; border-radius:unset; background-color:#EEEEEE" type="button" class="btn btn-outline-danger"><i class="fa-brands fa-youtube " style="color:black"></i></button>
+      </div> 
+      <p>toiyeutra.vn@gmail.com</p>
+    </div>
+
+    <div  class="footer-polite d-flex justify-content-start align-items-start flex-column">
+        <p class="fw-semibold fs-5 d-flex justify-content-center">CHÍNH SÁCH</p>
+        <br>
+        <a href="" style="text-decoration:none; color:black">Hình thức thanh toán</a>
+        <a href="" style="text-decoration:none; color:black">Chính sách & Quy định chung</a>
+        <a href="" style="text-decoration:none; color:black">Chính sách bảo mật thông tin</a>
+        <a href="" style="text-decoration:none; color:black">Chính sách đổi trả hàng</a>
+
+    </div>
+  </div>
+
+</div>
+<div class="d-flex justify-content-center align-items-center flex-column" style="background-color:#CECCC5; padding:0.8rem 0">
+    <div>© Bản quyền thuộc về Tôi Yêu Trà</div>
+    <div>Địa chỉ: Tòa CT14A1, KĐT. Ciputra, Võ Chí Công, Phú Thượng, Tây Hồ, Hà Nội.</div>
+</div>
