--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,87 +1,161 @@
-{{!-- Slide --}}
+{{! Slide }}
 
-<div id="carouselExampleIndicators" class="carousel carousel-dark " data-bs-ride="true">
+<div
+  id="carouselExampleIndicators"
+  class="carousel carousel-dark"
+  data-bs-ride="true"
+ 
+ >
   <div class="container-fluid">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <div class="carousel-indicators">
+      <button
+        type="button"
+        data-bs-target="#carouselExampleIndicators"
+        data-bs-slide-to="0"
+        class="active"
+        aria-current="true"
+        aria-label="Slide 1"
+      ></button>
+      <button
+        type="button"
+        data-bs-target="#carouselExampleIndicators"
+        data-bs-slide-to="1"
+        aria-label="Slide 2"
+      ></button>
+      <button
+        type="button"
+        data-bs-target="#carouselExampleIndicators"
+        data-bs-slide-to="2"
+        aria-label="Slide 3"
+      ></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-bs-interval="10000">
+        <img
+          src="https://toiyeutra.vn/upload/img/banner/tra_hoa_cuc_chi_hung_yen.jpg"
+          class="d-block w-100"
+          alt="..."
+        />
+      </div>
+      <div class="carousel-item" data-bs-interval="10000">
+        <img
+          src="https://toiyeutra.vn/upload/img/banner/atiso_do.jpg"
+          class="d-block w-100"
+          alt="..."
+        />
+      </div>
+      <div class="carousel-item" data-bs-interval="10000">
+        <img
+          src="https://toiyeutra.vn/upload/img/banner/coc_pha_tra_thuy_tinh1.jpg"
+          class="d-block w-100"
+          alt="..."
+        />
+      </div>
+
+    </div>
+    <button
+      class="carousel-control-prev"
+      type="button"
+      data-bs-target="#carouselExampleIndicators"
+      data-bs-slide="prev"
+    >
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button
+      class="carousel-control-next"
+      type="button"
+      data-bs-target="#carouselExampleIndicators"
+      data-bs-slide="next"
+    >
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active" data-bs-interval="10000">
-      <img src="https://toiyeutra.vn/upload/img/banner/tra_hoa_cuc_chi_hung_yen.jpg" class="d-block w-100" alt="..." >
-    </div>
-    <div class="carousel-item " data-bs-interval="10000">
-      <img src="https://toiyeutra.vn/upload/img/banner/atiso_do.jpg" class="d-block w-100 " alt="..." >
-    </div>
-    <div class="carousel-item " data-bs-interval="10000">
-      <img src="https://toiyeutra.vn/upload/img/banner/coc_pha_tra_thuy_tinh1.jpg" class="d-block w-100 " alt="..." >
-    </div>
-    
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
 </div>
 
-{{!-- NEWs --}}
-<br>
+{{! NEWs }}
+<br />
 <p class="fw-semibold fs-5">THÁNG NÀY UỐNG TRÀ GÌ?</p>
-<br>
-<div class="card mb-3 px-4 py-4" >
+<br />
+<div class="card mb-3 px-4 py-4">
   <div class="row g-0">
     <div class="col-md-4">
-      <img src="https://toiyeutra.vn/upload/img/pages/thang-nay-uong-tra-gi1.jpg" class="img-fluid rounded-start" alt="...">
+      <img
+        src="https://toiyeutra.vn/upload/img/pages/thang-nay-uong-tra-gi1.jpg"
+        class="img-fluid rounded-start"
+        alt="..."
+      />
     </div>
     <div class="col-md-8">
       <div class="card-body">
-        <p class="card-text">Trà hoa hồng từ lâu đã được ưa chuộng bởi hương thơm nhẹ nhàng, ngọt ngào đặc trưng của nó. Do có hàm lượng vitamin C cao nên hoa hồng rất có ích trong việc làm đẹp, giúp cơ thể khỏe mạnh, thải độc, mát gan. Là loài hoa tượng trưng cho tình yêu nên mỗi khi thưởng thức trà hoa hồng Đà Lạt, ta đều cảm nhận được một điều gì đó rất sâu sắc, lưu luyến, không muốn xa rời. </p>
-        <button type="button" class="btn btn-outline-dark">8 CÔNG DỤNG TUYỆT VỜI CỦA TRÀ HOA HỒNG</button>
+        <p class="card-text">Trà hoa hồng từ lâu đã được ưa chuộng bởi hương
+          thơm nhẹ nhàng, ngọt ngào đặc trưng của nó. Do có hàm lượng vitamin C
+          cao nên hoa hồng rất có ích trong việc làm đẹp, giúp cơ thể khỏe mạnh,
+          thải độc, mát gan. Là loài hoa tượng trưng cho tình yêu nên mỗi khi
+          thưởng thức trà hoa hồng Đà Lạt, ta đều cảm nhận được một điều gì đó
+          rất sâu sắc, lưu luyến, không muốn xa rời.
+        </p>
+        <button type="button" class="btn btn-outline-dark">8 CÔNG DỤNG TUYỆT VỜI
+          CỦA TRÀ HOA HỒNG</button>
       </div>
     </div>
   </div>
 </div>
 
-{{!-- trend --}}
-<br>
-<hr>
-<br>
+{{! trend }}
+<br />
+<hr />
+<br />
 <div class="d-flex justify-content-between">
   <p class="fw-semibold fs-5">XU HƯỚNG TUẦN NÀY</p>
   <button type="button" class="btn btn-outline-dark">XEM TẤT CẢ SẢN PHẨM</button>
 </div>
-<br>
-<hr>
+<br />
+<hr />
 
-
-{{!-- Content --}}
+{{! Content }}
 <div class="mt-4">
   <div class="row">
     {{#each herbalTeas}}
-    <div class="col-sm-6 col-lg-4">
-      <div class="card card-herbalTeas">
-        <a href="/herbal-tea/{{this.slug}}">
-        <img src="{{this.image}}" class="card-img-top" alt="..." />
-      </a>
-
-        <div class="card-body">
+      <div class="col-sm-6 col-lg-4">
+        <div class="card card-herbalTeas">
           <a href="/herbal-tea/{{this.slug}}">
-          <h5 class="card-title">{{this.name}}</h5>
+            <img src="{{this.image}}" class="card-img-top" alt="..." />
           </a>
-          <p class="card-text">{{this.price}}</p>
-          <a href="#" class="btn btn-primary">THÊM</a>
+
+          <div class="card-body">
+            <a href="/herbal-tea/{{this.slug}}">
+              <h5 class="card-title">{{this.name}}</h5>
+            </a>
+            <p class="card-text">{{this.price}}</p>
+            <a href="#" class="btn btn-primary">THÊM</a>
+          </div>
         </div>
       </div>
-    </div>
     {{/each}}
 
   </div>
 </div>
 
+{{! Tin tức }}
+<br />
+<hr />
+<p class="fw-semibold fs-5 d-flex justify-content-center">TIN TỨC</p>
+<div class="mt-4 ">
+  <div class="row" >
+    {{#each herbalTeaNews}}
+      <div class="col-sm-6 col-lg-3 ">
+        <div class="card herbal-news" >
+          <img src="{{this.image}}" class="img img-fluid image-news"  style="width:307px; height:200px;" />
+          <div class="card-body card-body-content">
+            <p class="card-title fw-bold ">{{this.name}}</p>
+            <p class="card-text fw-light ">{{this.detail}}</p>
 
+          </div>
+        </div>
+      </div>
+    {{/each}}
+
+  </div>
+</div>
