--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -31,7 +31,6 @@
             <li><a class="dropdown-item" href="/herbal-tea/create">Thêm sản phẩm</a></li>
             <li><a class="dropdown-item" href="/me/stored/products">Sửa sản phẩm</a></li>
             <li><a class="dropdown-item" href="#">Another action</a></li>
-          
             <li><a class="dropdown-item" href="#">Đăng xuất</a></li>
           </ul>
         </li>
@@ -41,18 +40,45 @@
 </nav>
 
 <nav class="navbar navbar-expand-lg bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+  <div class="container">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
-        <a class="nav-link" href="#">Features</a>
-        <a class="nav-link" href="#">Pricing</a>
-        <a class="nav-link disabled">Disabled</a>
-      </div>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Trang chủ</a>
+        </li>
+        <li class="nav-item  dropdown">
+          <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Sản phẩm
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="/products/tra-thao-duoc">Trà thảo dược</a></li>
+            <li><a class="dropdown-item" href="#">Trà Detox</a></li>
+            <li><a class="dropdown-item" href="#">Trà trị liệu</a></li>
+            <li><a class="dropdown-item" href="#">Trà hương vị</a></li>
+            <li><a class="dropdown-item" href="#">Trà xanh</a></li>
+            <li><a class="dropdown-item" href="#">Trà Shan tuyết cổ thụ</a></li>
+            <li><a class="dropdown-item" href="#">Đồ uống trà</a></li>
+            <li><a class="dropdown-item" href="#">Set quà tặng</a></li>
+            <li><a class="dropdown-item" href="#">Các loại thảo mộc</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Giới thiệu</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Bán sỉ</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Tin tức</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Liên hệ</a>
+        </li>
+        
+      </ul>
     </div>
   </div>
 </nav>
