--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,60 +1,42 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container d-flex align-items-center">
-    <div class="col-5 col-sm-5">
-      <i class="fa-brands fa-facebook icon-header"></i>
-      <i class="fa-brands fa-instagram icon-header"></i>
-      <i class="fa-brands fa-youtube icon-header"></i>
-    </div>
-    <a class="navbar-brand" href="#"><img
+<nav class="navbar navbar-expand-lg bg-light">
+  
+  <div class="container ">
+    <a class="navbar-brand position-relative" href="#"><img
         src="https://toiyeutra.vn/upload/img/tra_thao_moc1.png"
         class="col-6 col-sm-6"
         alt=""
       />
+      <button
+        class="navbar-toggler position-absolute top-0 start-70"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
     </a>
-    <div
-      class="collapse navbar-collapse justify-content-end col-2 col-sm-2"
-      id="navbarNavDarkDropdown"
-    >
-    
-      <ul class="navbar-nav">
-        <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            href="#"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            Nghĩa Lê
-          </a>
-          <ul class="dropdown-menu dropdown-menu-light">
-            <li><a class="dropdown-item" href="/herbal-tea/create">Thêm sản phẩm</a></li>
-            <li><a class="dropdown-item" href="/me/stored/products">Sửa sản phẩm</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Đăng xuất</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
 
-<nav class="navbar navbar-expand-lg bg-light">
-  <div class="container">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Trang chủ</a>
         </li>
-        <li class="nav-item  dropdown">
-          <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle active"
+            href="#"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
             Sản phẩm
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="/products/tra-thao-duoc">Trà thảo dược</a></li>
+            <li><a class="dropdown-item" href="/products/tra-thao-duoc">Trà thảo
+                dược</a></li>
             <li><a class="dropdown-item" href="#">Trà Detox</a></li>
             <li><a class="dropdown-item" href="#">Trà trị liệu</a></li>
             <li><a class="dropdown-item" href="#">Trà hương vị</a></li>
@@ -77,8 +59,40 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Liên hệ</a>
         </li>
-        
+
       </ul>
     </div>
+
+    <ul class="navbar-nav " >
+      <li class="nav-item">
+         <a href=""
+         class="nav-link ">
+          <i
+            class="fa-solid fa-cart-shopping  "
+          >
+          </i>
+    </a>
+      </li>
+        
+      
+      <li class="nav-item dropdown col-6">
+        <a
+          class="nav-link dropdown-toggle  "
+          href="#"
+          role="button"
+          data-bs-toggle="dropdown"
+          aria-expanded="false"
+        >
+          <i class="fa-solid fa-user px-1"></i>
+          Nghĩa Lê
+        </a>
+        <ul class="dropdown-menu dropdown-menu-light">
+          <li><a class="dropdown-item" href="/herbal-tea/create">Thêm sản phẩm</a></li>
+          <li><a class="dropdown-item" href="/me/stored/products">Sửa sản phẩm</a></li>
+          <li><a class="dropdown-item" href="#">Another action</a></li>
+          <li><a class="dropdown-item" href="#">Đăng xuất</a></li>
+        </ul>
+      </li>
+    </ul>
   </div>
 </nav>
