--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -31,5 +31,19 @@
 {
    transform: scale(1.01);
 }
-
+.card-herbalTeas
+{
+    border: none;
+}
+.herbalImg
+{
+    text-decoration: none;
+    color: black;
+    font-size:small;
+    
+}
+.slide-show
+{
+    border: 1px solid black;
+}
 
