--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -118,15 +118,15 @@
 <div class="mt-4">
   <div class="row">
     {{#each herbalTeas}}
-      <div class="col-sm-6 col-lg-4">
-        <div class="card card-herbalTeas">
-          <a href="/herbal-tea/{{this.slug}}">
-            <img src="{{this.image}}" class="card-img-top" alt="..." />
+      <div class="col-sm-6 col-lg-3 card-herbalTeas">
+        <div class=" card card-herbalTeas">
+          <a href="/herbal-tea/{{this.slug}}" class=" card-herbalTeas border border-2">
+            <img src="{{this.image}}" class="card-img-top "  />
           </a>
 
           <div class="card-body">
-            <a href="/herbal-tea/{{this.slug}}">
-              <h5 class="card-title">{{this.name}}</h5>
+            <a href="/herbal-tea/{{this.slug}}" class="herbalImg">
+              <h5 class="card-title herbalImg">{{this.name}}</h5>
             </a>
             <p class="card-text">{{this.price}}</p>
             <a href="#" class="btn btn-primary">THÊM</a>
