--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg bg-light">
   
   <div class="container ">
-    <a class="navbar-brand position-relative" href="#"><img
+    <a class="navbar-brand position-relative" href="/"><img
         src="https://toiyeutra.vn/upload/img/tra_thao_moc1.png"
         class="col-6 col-sm-6"
         alt=""
