--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -21,3 +21,14 @@
 
 .image-news:hover {
   transform: scale(1.01); }
+
+.card-herbalTeas {
+  border: none; }
+
+.herbalImg {
+  text-decoration: none;
+  color: black;
+  font-size: small; }
+
+.slide-show {
+  border: 1px solid black; }
