--- a/src/resources/views/herbalteas/show.hbs
+++ b/src/resources/views/herbalteas/show.hbs
@@ -1,77 +1,52 @@
-<div class="mt-4">
-  <div class="row">
+<div class="mt-4 container">
+  
     {{#with herbalTeas}}
-<<<<<<< HEAD
-    <div class="col-sm-6 col-lg-4">
-      z
-      <div class="card card-herbalTeas">
-
-        <img src="{{this.image}}" class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">{{this.name}}</h5>       
-          <p class="card-text">{{this.price}}</p>
-          <a href="#" class="btn btn-primary">THÊM</a>
-=======
+    <div class="row border border-2 rounded-3 ">
       <div
-        id="carouselExampleCaptions"
-        class="carousel carousel-dark slide col-5 slide-show border border-2 rounded-3 "
-        data-bs-ride="false"
+        id="carouselExampleDark"
+        class="carousel carousel-dark slide col-5 "
+        data-bs-ride="carousel"
       >
         <div class="carousel-indicators">
           <button
-            data-bs-target="#carouselExampleCaptions"
+            type="button"
+            data-bs-target="#carouselExampleDark"
             data-bs-slide-to="0"
-            class="active col-4 button-show"
+            class="active"
             aria-current="true"
             aria-label="Slide 1"
-            style=" height: 50px;width: 50px; background-image: url({{this.image}});background-size: cover;border:1px solid black"
           ></button>
           <button
-            data-bs-target="#carouselExampleCaptions"
+            type="button"
+            data-bs-target="#carouselExampleDark"
             data-bs-slide-to="1"
             aria-label="Slide 2"
-            class="col-4"
-            style="height: 50px;width: 50px; background-image: url({{this.image}});background-size: cover;border:1px solid black"
           ></button>
           <button
-            data-bs-target="#carouselExampleCaptions"
+            type="button"
+            data-bs-target="#carouselExampleDark"
             data-bs-slide-to="2"
             aria-label="Slide 3"
-            class="col-4"
-            style="height: 50px;width: 50px; background-image: url({{this.image}});background-size: cover;border:1px solid black"
           ></button>
->>>>>>> 588937f73e9e7ee1021cdb217a5dc2afaa26cbf0
         </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img
-              src="https://toiyeutra.vn/upload/img/products/tra-bo-duong-long-nhan-ky-tu-tao-do.jpg"
-              class="d-block w-100"
-              alt="..."
-            />
-
+        <div class="carousel-inner ">
+          <div class="carousel-item active" data-bs-interval="10000">
+            <img src="{{this.image}}" class="d-block w-100" alt="..." />
+           
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="{{this.image}}" class="d-block w-100" alt="..." />
+            
           </div>
           <div class="carousel-item">
-            <img
-              src="https://toiyeutra.vn/upload/img/products/tra-bo-duong-long-nhan-ky-tu-tao-do.jpg"
-              class="d-block w-100"
-              alt="..."
-            />
-
-          </div>
-          <div class="carousel-item">
-            <img
-              src="https://toiyeutra.vn/upload/img/products/tra-bo-duong-long-nhan-ky-tu-tao-do.jpg"
-              class="d-block w-100"
-              alt="..."
-            />
-
+            <img src="{{this.image}}" class="d-block w-100" alt="..." />
+        
           </div>
         </div>
         <button
           class="carousel-control-prev"
           type="button"
-          data-bs-target="#carouselExampleCaptions"
+          data-bs-target="#carouselExampleDark"
           data-bs-slide="prev"
         >
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -80,33 +55,61 @@
         <button
           class="carousel-control-next"
           type="button"
-          data-bs-target="#carouselExampleCaptions"
+          data-bs-target="#carouselExampleDark"
           data-bs-slide="next"
         >
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+    
 
-
-      {{!-- detail --}}
-      <div class="col-7  " >
-          <div class="border border-2 rounded-3 " style="height:30%"></div>
-          <div  class=" border border-2 rounded-3 " style="height:70%"></div>
-      </div>
-
-     {{!-- cách pha trà --}}
-     <div class="row mt-3" style="height:100px;width:100%">
-      <div class="col-5 border border-2 rounded-3" style=" ">
-            <h5>eh</h5>
-      </div>
+      {{! detail }}
       <div class="col-7 ">
-          <div class="border border-2 rounded-3">
-              hello
-          </div>
+        <div class="" style="height:30%"></div>
+        <div class=" " style="height:70%"></div>
       </div>
     </div>
-    {{/with}}
+      {{! cách pha trà }}
+      
+      <div class="row mt-2 border border-2 rounded-3" style="height:100px ;">
+         
+      </div> 
 
-  </div>
+      {{!-- feedback-khach hang --}}
+     
+
+      <div class="row mt-2  border border-2 rounded-3" >
+         <div class="col-3 mt-2" style="height:100px">
+          <h1 class="border border-2 mt-2">hello</h1>
+         </div>
+         <div class="col-3 mt-2" style="height:100px">
+          <h1 class="border border-2 mt-2">hello</h1>
+         </div>
+         <div class="col-3 mt-2" style="height:100px">
+          <h1 class="border border-2 mt-2">hello</h1>
+         </div>
+         <div class="col-3 mt-2" style="height:100px">
+          <h1 class="border border-2 mt-2">hello</h1>
+         </div>
+
+         <div class="col-3 mt-2" style="height:100px">
+          <h1 class="border border-2  mt-2">hello</h1>
+         </div>
+         <div class="col-3 mt-2" style="height:100px">
+          <h1 class="border border-2  mt-2">hello</h1>
+         </div>
+         <div class="col-3 mt-2" style="height:100px">
+          <h1 class="border border-2  mt-2">hello</h1>
+         </div>
+         <div class="col-3 mt-2" style="height:100px">
+          <h1 class="border border-2  mt-2">hello</h1>
+         </div>
+      </div>
+    
+      {{!-- liên quan --}}
+      <div class="row mt-2  border border-2 rounded-3" style="height: 100px;">
+      </div>
+  
+  {{/with}}
 </div>
