--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -76,7 +76,7 @@
 
 {{! NEWs }}
 <br />
-<p class="fw-semibold fs-5">THÁNG NÀY UỐNG TRÀ GÌ?</p>
+<p class="fw-semibold fs-5">CÁCH PHA TRÀ ĐÚNG CÁCH?</p>
 <br />
 <div class="card mb-3 px-4 py-4">
   <div class="row g-0">
@@ -94,10 +94,9 @@
           cao nên hoa hồng rất có ích trong việc làm đẹp, giúp cơ thể khỏe mạnh,
           thải độc, mát gan. Là loài hoa tượng trưng cho tình yêu nên mỗi khi
           thưởng thức trà hoa hồng Đà Lạt, ta đều cảm nhận được một điều gì đó
-          rất sâu sắc, lưu luyến, không muốn xa rời.
+          rất sâu sắc, lưu luyến, không muốn xa rời...
         </p>
-        <button type="button" class="btn btn-outline-dark">8 CÔNG DỤNG TUYỆT VỜI
-          CỦA TRÀ HOA HỒNG</button>
+        <a type="button" href="" class="btn btn-outline-dark">CÁCH PHA TRÀ THẢO MỘC</a>
       </div>
     </div>
   </div>
