--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -22,7 +22,7 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Trang chủ</a>
+          <a class="nav-link active" aria-current="page" href="/">Trang chủ</a>
         </li>
         <li class="nav-item dropdown">
           <a
@@ -48,16 +48,13 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Giới thiệu</a>
+          <a class="nav-link active" aria-current="page" href="/introduce">Giới thiệu</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Bán sỉ</a>
+          <a class="nav-link active" aria-current="page" href="/wholesale">Bán sỉ</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Tin tức</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Liên hệ</a>
+          <a class="nav-link active" aria-current="page" href="/contact">Liên hệ</a>
         </li>
 
       </ul>
