--- a/src/resources/views/partials/footer.hbs
+++ b/src/resources/views/partials/footer.hbs
@@ -1,4 +1,4 @@
-<div class="mt-4 d-flex" style="background-color: #F4F4F2;">
+<div class="mt-4 d-flex justify-content-evenly" style="background-color: #F4F4F2;">
   <div
     class="card mb-3 col-6 px-5"
     style="max-width: 540px; border:none; background-color:transparent"
@@ -6,7 +6,7 @@
     <div class="row g-0">
       <div class="col-md-4" style="padding:20px">
         <img
-          src="https://toiyeutra.vn/upload/img/tra_thao_moc1.png"
+          src="/img/citalogo.png"
           class="img-fluid rounded-start"
           alt="..."
         />
@@ -24,7 +24,7 @@
       </div>
     </div>
   </div>
-  <div class="col-6 d-flex justify-content-evenly py-3">
+  <div class="col-8 d-flex justify-content-evenly py-3">
     <div
       class="footer-info d-flex justify-content-start align-items-start flex-column px-4"
     >
