--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,32 +1,67 @@
-<nav class="navbar navbar-expand-lg bg-light">
-  
-  <div class="container ">
-    <a class="navbar-brand position-relative" href="/"><img
-        src="https://toiyeutra.vn/upload/img/tra_thao_moc1.png"
-        class="col-6 col-sm-6"
-        alt=""
-      />
-      <button
-        class="navbar-toggler position-absolute top-0 start-70"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarNavDropdown"
-        aria-controls="navbarNavDropdown"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    </a>
 
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+<nav class="navbar navbar-expand-lg bg-light shadow  bg-body rounded" style="background-image: linear-gradient(#FFFAD7,#F7F6F2)" >
+  
+  <div class="container-fluid  " >
+    <a class="navbar-brand ms-5 me-5" href="#"><img src="/img/citalogo.png" alt="" style="height: 70px; width:100px"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon "></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active fw-bold fs-5 text-success" aria-current="page" href="/">Trang Chủ</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active fw-normal fs-5 text-secondary" aria-current="page" href="/introduce">Giới
+            Thiệu</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link active fw-normal fs-5 text-secondary" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Sản Phẩm
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="/products/tra-thao-duoc">Trà thảo
+                dược</a></li>
+            <li><a class="dropdown-item" href="#">Trà Detox</a></li>
+            <li><a class="dropdown-item" href="#">Trà trị liệu</a></li>
+            <li><a class="dropdown-item" href="#">Trà hương vị</a></li>
+            <li><a class="dropdown-item" href="#">Trà xanh</a></li>
+            <li><a class="dropdown-item" href="#">Trà Shan tuyết cổ thụ</a></li>
+            <li><a class="dropdown-item" href="#">Đồ uống trà</a></li>
+            <li><a class="dropdown-item" href="#">Set quà tặng</a></li>
+            <li><a class="dropdown-item" href="#">Các loại thảo mộc</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active fw-normal fs-5 text-secondary" aria-current="page" href="/news">Tin Tức</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active fw-normal fs-5 text-secondary" aria-current="page" href="/contact">Liên Hệ</a>
+        </li>
+      </ul>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
+
+
+{{!-- <nav class="navbar navbar-expand-lg bg-light">
+ 
+  <div class="">
+    <div
+      class="collapse navbar-collapse col-7 "
+      id="navbarNavDropdown"
+    >
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/">Trang chủ</a>
         </li>
         <li class="nav-item dropdown">
           <a
-            class="nav-link dropdown-toggle active"
+            class="nav-link active"
             href="#"
             role="button"
             data-bs-toggle="dropdown"
@@ -48,33 +83,34 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/introduce">Giới thiệu</a>
+          <a class="nav-link active" aria-current="page" href="/introduce">Giới
+            thiệu</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/wholesale">Bán sỉ</a>
+          <a class="nav-link active" aria-current="page" href="/wholesale">Bán
+            sỉ</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/news">Tin tức</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/contact">Liên hệ</a>
         </li>
 
-      </ul>
+      </ul> --}}
     </div>
 
-    <ul class="navbar-nav " >
+    {{!-- <ul class="navbar-nav col-1">
       <li class="nav-item">
-         <a href=""
-         class="nav-link ">
-          <i
-            class="fa-solid fa-cart-shopping  "
-          >
+        <a href="" class="nav-link">
+          <i class="fa-solid fa-cart-shopping">
           </i>
-    </a>
+        </a>
       </li>
-        
-      
-      <li class="nav-item dropdown col-6">
+
+      <li class="nav-item dropdown col-1">
         <a
-          class="nav-link dropdown-toggle  "
+          class="nav-link dropdown-toggle"
           href="#"
           role="button"
           data-bs-toggle="dropdown"
@@ -90,6 +126,8 @@
           <li><a class="dropdown-item" href="#">Đăng xuất</a></li>
         </ul>
       </li>
-    </ul>
-  </div>
-</nav>
+    </ul> --}}
+
+
+  {{!-- </div>
+</nav> --}}
