--- a/src/resources/views/contact.hbs
+++ b/src/resources/views/contact.hbs
@@ -3,13 +3,13 @@
     Liên hệ
   </h2>
   <p>
-    VPGD: 107 Giáp Nhất,Phường Thượng Đình,Quận Thanh Xuân, Hà Nội
+    Showroom: 107 Giáp Nhất,Phường Thượng Đình,Quận Thanh Xuân, Hà Nội
   </p>
   <p>
     Email: toiyeutra.vn@gmail.com
   </p>
   <p>
-    Điện thoại: 0987.829.935 (Mrs Nhật)
+    Điện thoại: 0355.159.191 (Mrs Nhật)
   </p>
 
     <form>
