--- a/src/resources/views/introduce.hbs
+++ b/src/resources/views/introduce.hbs
@@ -12,7 +12,7 @@
   <div class="col-2 mt-2"></div>
   <img
     class="col-8"
-    src="https://toiyeutra.vn/upload/files/co%20gai%20hai%20che%20toi%20yeu%20tra.jpg"
+    src="/img/womentea.png"
     alt=""
   />
   <div class="col-2"></div>
@@ -50,7 +50,7 @@
   <div class="col-2"></div>
   <img
     class="col-8"
-    src="https://toiyeutra.vn/upload/files/tra%20xanh%209.jpg"
+    src="/img/introduceimg2.png"
     alt=""
   />
   <div class="col-2"></div>
