--- a/src/resources/views/herbalteas/show.hbs
+++ b/src/resources/views/herbalteas/show.hbs
@@ -1,49 +1,69 @@
 <div class="mt-4 container">
-  
-    {{#with herbalTeas}}
-    <div class="row border border-2 rounded-3 ">
+
+  {{#with herbalTeas}}
+    <div
+      class="row pt-2 pb-2 shadow mb-5 bg-body rounded"
+      style="border: none;background-image: linear-gradient(#FFFAD7,#F7F6F2)"
+    >
       <div
         id="carouselExampleDark"
-        class="carousel carousel-dark slide col-5 "
+        class="carousel carousel-dark slide col-5"
         data-bs-ride="carousel"
       >
-        <div class="carousel-indicators">
+        <div class="carousel-indicators mt-3">
           <button
             type="button"
             data-bs-target="#carouselExampleDark"
             data-bs-slide-to="0"
-            class="active"
+            class="active me-3 mt-3 border rounded-2"
             aria-current="true"
             aria-label="Slide 1"
+            style="height: 40px;width:40px;background-image:url({{this.image}});background-position: center"
           ></button>
           <button
             type="button"
+            class="active me-3 mt-3 border rounded-2"
             data-bs-target="#carouselExampleDark"
             data-bs-slide-to="1"
             aria-label="Slide 2"
+            style="height: 40px;width:40px;background-image:url({{this.image}});background-position: center"
           ></button>
           <button
             type="button"
+            class="active me-3 mt-3 border rounded-2"
             data-bs-target="#carouselExampleDark"
             data-bs-slide-to="2"
             aria-label="Slide 3"
+            style="height: 40px;width:40px;background-image:url({{this.image}});background-position: center"
           ></button>
         </div>
-        <div class="carousel-inner ">
+        <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="10000">
-            <img src="{{this.image}}" class="d-block w-100" alt="..." />
-           
+            <img
+              src="{{this.image}}"
+              class="d-block w-100 "
+              alt="..."
+            />
+
           </div>
           <div class="carousel-item" data-bs-interval="2000">
-            <img src="{{this.image}}" class="d-block w-100" alt="..." />
-            
+            <img
+              src="{{this.image}}"
+              class="d-block w-100 "
+              alt="..."
+            />
+
           </div>
           <div class="carousel-item">
-            <img src="{{this.image}}" class="d-block w-100" alt="..." />
-        
+            <img
+              src="{{this.image}}"
+              class="d-block w-100 "
+              alt="..."
+            />
+
           </div>
         </div>
-        <button
+        {{!-- <button
           class="carousel-control-prev"
           type="button"
           data-bs-target="#carouselExampleDark"
@@ -60,56 +80,191 @@
         >
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
-        </button>
+        </button> --}}
       </div>
-    
 
       {{! detail }}
-      <div class="col-7 ">
-        <div class="" style="height:30%"></div>
-        <div class=" " style="height:70%"></div>
+      <div class="col-7">
+        <div
+          class="shadow bg-body rounded d-flex justify-content-center align-items-center"
+          style="height:100%;"
+        >
+          <div class="shadow bg-body rounded" style="width:98%">
+            <table
+              class="table table-bordered table-striped mb-0 rounded border border-success"
+            >
+              <thead>
+                <tr>
+                  <th scope="row" class="text-success">Tên</th>
+                  <th scope="row" class="text-success">{{this.name}}</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row" class="text-success">Giá</th>
+                  <td class="fw-bolder">Hộp 10 gói: 170.000đ<br />
+                    Hộp 30 gói: 300.000đ
+                  </td>
+                </tr>
+                <tr>
+                  <th scope="row" class="text-success">Xuất xứ</th>
+                  <td>Việt Nam</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="text-success">Thành phần</th>
+                  <td>Táo đỏ đen, nho, long nhãn, kỷ tử, xí muội, trần bì, cam
+                    thảo , đường phèn và trà lipton</td>
+
+                </tr>
+                <tr>
+                  <th scope="row" class="text-success">Hạn sử dụng</th>
+                  <td colspan="2">6 tháng kể từ ngày sản xuất</td>
+
+                </tr>
+
+                <tr>
+                  <th scope="row" class="text-success">Công dụng</th>
+                  <td colspan="2">
+                    Là loại trà giúp bảo vệ cổ họng , chống viêm họng.
+                    <br />
+                    Bổ sung vitamin , tốt cho sức khỏe.
+                    <br />
+                    Phòng tránh một số bệnh về tim mạch, tiểu đường.
+                    <br />
+                    Giúp tinh thần tỉnh táo do có hàm lượng caffeine nhất định.
+                    <br />
+                    Lợi tiểu, giải độc, giảm nhiệt, sát trùng vết thương.</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
       </div>
     </div>
-      {{! cách pha trà }}
-      
-      <div class="row mt-2 border border-2 rounded-3" style="height:100px ;">
-         
-      </div> 
+    {{! cách pha trà }}
 
-      {{!-- feedback-khach hang --}}
-     
+    <div
+      class="row mt-2 shadow mb-5 bg-body rounded"
+      style=" border: none;background-image: linear-gradient(#FFFAD7,#F7F6F2)"
+    >
+      <div class="col-5">
+        <div
+          class="card ms-2 mt-2 mb-1 d-flex justify-content-center align-items-center"
+          style="height: 95%;border: none"
+        >
+          <div class="card-body">
+            <h5
+              class="card-title d-flex justify-content-center text-success"
+            >Cách pha trà</h5>
 
-      <div class="row mt-2  border border-2 rounded-3" >
-         <div class="col-3 mt-2" style="height:100px">
-          <h1 class="border border-2 mt-2">hello</h1>
-         </div>
-         <div class="col-3 mt-2" style="height:100px">
-          <h1 class="border border-2 mt-2">hello</h1>
-         </div>
-         <div class="col-3 mt-2" style="height:100px">
-          <h1 class="border border-2 mt-2">hello</h1>
-         </div>
-         <div class="col-3 mt-2" style="height:100px">
-          <h1 class="border border-2 mt-2">hello</h1>
-         </div>
+            <p class="card-text">
+              - Dùng gói hồng trà pha với nước nóng 300-400ml
+              <br />
+              - Cho lần lượt các thảo mộc vào cùng
+              <br />
+              - Ủ trà tầm 10-15' cho ngấm
+              <br />
+              - Cho đường có sẵn vào vừa vị
+              <br />
+              - Cho thêm đá để ngon hơn.</p>
 
-         <div class="col-3 mt-2" style="height:100px">
-          <h1 class="border border-2  mt-2">hello</h1>
-         </div>
-         <div class="col-3 mt-2" style="height:100px">
-          <h1 class="border border-2  mt-2">hello</h1>
-         </div>
-         <div class="col-3 mt-2" style="height:100px">
-          <h1 class="border border-2  mt-2">hello</h1>
-         </div>
-         <div class="col-3 mt-2" style="height:100px">
-          <h1 class="border border-2  mt-2">hello</h1>
-         </div>
+          </div>
+        </div>
       </div>
-    
-      {{!-- liên quan --}}
-      <div class="row mt-2  border border-2 rounded-3" style="height: 100px;">
+
+      {{! form-success }}
+
+      <div class="col-7">
+        
+        <form class="mt-2 mb-2 shadow bg-body rounded p-3">
+          <h5 class="card-title d-flex justify-content-center text-success mb-3">THÔNG
+          TIN MUA HÀNG
+        </h5>
+          <div class="mb-1">
+
+            <input
+              type="text"
+              class="form-control border border-2 border-success"
+              id="exampleInputEmail1"
+              aria-describedby="emailHelp"
+              placeholder="Họ và tên"
+            />
+
+          </div>
+          <div class="mb-1">
+
+            <input
+              type="text"
+              class="form-control border border-2 border-success"
+              id="exampleInputPassword1"
+              placeholder="Số điện thoại"
+            />
+          </div>
+          <div class="mb-1">
+
+            <input
+              type="text"
+              class="form-control border border-2 border-success"
+              id="exampleInputPassword1"
+              placeholder="Địa chỉ"
+            />
+          </div>
+          <select class="form-select mb-1 border border-2 border-success" aria-label="Default select example">
+            <option selected>Chọn loại hộp</option>
+            <option value="1">Hộp 10 gói(170.000vnđ)</option>
+            <option value="1">Hộp 30 gói(340.000vnđ)</option>
+
+          </select>
+          <div class="mb-3">
+
+            <input
+              type="number"
+              class="form-control border border-2 border-success"
+              id="exampleInputPassword1"
+              placeholder="Số lượng"
+            />
+          </div>
+          <div class="d-flex justify-content-center">
+            <button type="submit" class="btn text-white bg-success">MUA NGAY</button>
+          </div>
+          
+        </form>
       </div>
-  
+    </div>
+
+    {{! feedback-khach hang }}
+
+    <div class="row mt-2 border border-2 rounded-3">
+      <div class="col-3 mt-2" style="height:100px">
+        <h1 class="border border-2 mt-2">hello</h1>
+      </div>
+      <div class="col-3 mt-2" style="height:100px">
+        <h1 class="border border-2 mt-2">hello</h1>
+      </div>
+      <div class="col-3 mt-2" style="height:100px">
+        <h1 class="border border-2 mt-2">hello</h1>
+      </div>
+      <div class="col-3 mt-2" style="height:100px">
+        <h1 class="border border-2 mt-2">hello</h1>
+      </div>
+
+      <div class="col-3 mt-2" style="height:100px">
+        <h1 class="border border-2 mt-2">hello</h1>
+      </div>
+      <div class="col-3 mt-2" style="height:100px">
+        <h1 class="border border-2 mt-2">hello</h1>
+      </div>
+      <div class="col-3 mt-2" style="height:100px">
+        <h1 class="border border-2 mt-2">hello</h1>
+      </div>
+      <div class="col-3 mt-2" style="height:100px">
+        <h1 class="border border-2 mt-2">hello</h1>
+      </div>
+    </div>
+
+    {{! liên quan }}
+    <div class="row mt-2 border border-2 rounded-3" style="height: 100px;">
+    </div>
+
   {{/with}}
 </div>
